[gd_scene load_steps=7 format=2]

[ext_resource path="res://Jugador.tscn" type="PackedScene" id=1]
[ext_resource path="res://NivelEmboscadaDeRobots.gd" type="Script" id=2]
[ext_resource path="res://Robotito.tscn" type="PackedScene" id=3]
[ext_resource path="res://Danger.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
position = Vector2( 154.089, 98.0908 )
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="TileMap" parent="." instance=ExtResource( 6 )]
position = Vector2( -4.13832, -93.3496 )
tile_data = PoolIntArray( -524303, 0, 0, -524302, 0, 0, -524301, 0, 0, -524300, 0, 0, -524299, 0, 0, -524298, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 0, 0, -524292, 0, 0, -524291, 0, 0, -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -589813, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 0, 0, -589807, 0, 0, -589806, 0, 0, -589805, 0, 0, -589804, 0, 0, -589803, 0, 0, -589802, 0, 0, -589801, 0, 0, -589800, 0, 0, -589799, 0, 0, -589798, 0, 0, -589797, 0, 0, -589796, 0, 0, -589795, 0, 0, -589794, 0, 0, -589793, 0, 0, -589792, 0, 0, -589791, 0, 0, -589790, 0, 0, -589789, 0, 0, -589788, 0, 0, -589787, 0, 0, -589786, 0, 0, -589785, 0, 0, -589784, 0, 0, -589783, 0, 0, -589782, 0, 0, -589781, 0, 0, -589780, 0, 0, -589779, 0, 0, -589778, 0, 0, -589777, 0, 0, -589776, 0, 0, -589775, 0, 0, -589774, 0, 0, -589773, 0, 0, -589772, 0, 0, -589771, 0, 0, -589770, 0, 0, -589769, 0, 0, -589768, 0, 0, -589767, 0, 0, -589766, 0, 0, -589765, 0, 0, -589764, 0, 0, -589763, 0, 0, -589762, 0, 0, -589761, 0, 0, -589760, 0, 0, -589759, 0, 0, -589758, 0, 0, -589757, 0, 0, -589756, 0, 0, -589755, 0, 0, -589754, 0, 0, -589753, 0, 0, -589752, 0, 0, -589751, 0, 0, -589750, 0, 0, -589749, 0, 0, -589748, 0, 0, -589747, 0, 0, -589746, 0, 0, -589745, 0, 0, -589744, 0, 0, -589743, 0, 0, -589742, 0, 0, -589741, 0, 0, -589740, 0, 0, -458767, 0, 0, -524204, 0, 0, -524203, 0, 0, -393231, 0, 0, -327695, 0, 0, -262159, 0, 0, -196623, 0, 0, -131087, 0, 0, -65551, 0, 0, -15, 0, 0, 65521, 0, 0, 68, 0, 0, 69, 0, 0, 70, 0, 0, 71, 0, 0, 72, 0, 0, 73, 0, 0, 74, 0, 0, 75, 0, 0, 76, 0, 0, 77, 0, 0, 78, 0, 0, 87, 0, 0, 88, 0, 0, 89, 0, 0, 90, 0, 0, 91, 0, 0, 92, 0, 0, 93, 0, 0, 94, 0, 0, 119, 0, 0, 120, 0, 0, 121, 0, 0, 122, 0, 0, 123, 0, 0, 124, 0, 0, 125, 0, 0, 126, 0, 0, 127, 0, 0, 128, 0, 0, 129, 0, 0, 130, 0, 0, 131, 0, 0, 132, 0, 0, 133, 0, 0, 134, 0, 0, 135, 0, 0, 136, 0, 0, 137, 0, 0, 138, 0, 0, 139, 0, 0, 140, 0, 0, 141, 0, 0, 142, 0, 0, 143, 0, 0, 144, 0, 0, 145, 0, 0, 146, 0, 0, 147, 0, 0, 148, 0, 0, 149, 0, 0, 131057, 0, 0, 65627, 0, 0, 65628, 0, 0, 65629, 0, 0, 65630, 0, 0, 65685, 0, 0, 196593, 0, 0, 131163, 0, 0, 131164, 0, 0, 131165, 0, 0, 131166, 0, 0, 131196, 0, 0, 131197, 0, 0, 131198, 0, 0, 131199, 0, 0, 131200, 0, 0, 131202, 0, 0, 131205, 0, 0, 131209, 0, 0, 131215, 0, 0, 131216, 0, 0, 131217, 0, 0, 131221, 0, 0, 262129, 0, 0, 196699, 0, 0, 196700, 0, 0, 196701, 0, 0, 196702, 0, 0, 196732, 0, 0, 196738, 0, 0, 196741, 0, 0, 196742, 0, 0, 196745, 0, 0, 196753, 0, 0, 196757, 0, 0, 327665, 0, 0, 262235, 0, 0, 262236, 0, 0, 262237, 0, 0, 262238, 0, 0, 262268, 0, 0, 262274, 0, 0, 262277, 0, 0, 262278, 0, 0, 262281, 0, 0, 262285, 0, 0, 262286, 0, 0, 262289, 0, 0, 262293, 0, 0, 393201, 0, 0, 327771, 0, 0, 327772, 0, 0, 327773, 0, 0, 327774, 0, 0, 327804, 0, 0, 327805, 0, 0, 327806, 0, 0, 327810, 0, 0, 327813, 0, 0, 327815, 0, 0, 327817, 0, 0, 327825, 0, 0, 327829, 0, 0, 458737, 0, 0, 393307, 0, 0, 393308, 0, 0, 393309, 0, 0, 393310, 0, 0, 393340, 0, 0, 393346, 0, 0, 393349, 0, 0, 393351, 0, 0, 393353, 0, 0, 393357, 0, 0, 393358, 0, 0, 393361, 0, 0, 393365, 0, 0, 524273, 0, 0, 458843, 0, 0, 458844, 0, 0, 458845, 0, 0, 458846, 0, 0, 458847, 0, 0, 458848, 0, 0, 458849, 0, 0, 458850, 0, 0, 458876, 0, 0, 458882, 0, 0, 458885, 0, 0, 458888, 0, 0, 458889, 0, 0, 458897, 0, 0, 458901, 0, 0, 589809, 0, 0, 524379, 0, 0, 524380, 0, 0, 524381, 0, 0, 524382, 0, 0, 524383, 0, 0, 524384, 0, 0, 524385, 0, 0, 524386, 0, 0, 524412, 0, 0, 524418, 0, 0, 524421, 0, 0, 524425, 0, 0, 524433, 0, 0, 524437, 0, 0, 655345, 0, 0, 589839, 1610612736, 0, 589915, 0, 0, 589916, 0, 0, 589917, 0, 0, 589918, 0, 0, 589919, 0, 0, 589920, 0, 0, 589921, 0, 0, 589922, 0, 0, 589967, 0, 0, 589968, 0, 0, 589969, 0, 0, 589973, 0, 0, 720881, 0, 0, 655439, 0, 0, 655440, 0, 0, 655441, 0, 0, 655445, 0, 0, 655446, 0, 0, 655447, 0, 0, 655451, 0, 0, 655452, 0, 0, 655453, 0, 0, 655454, 0, 0, 655455, 0, 0, 655456, 0, 0, 655457, 0, 0, 655458, 0, 0, 655509, 0, 0, 786417, 0, 0, 720975, 0, 0, 720976, 0, 0, 720977, 0, 0, 720981, 0, 0, 720982, 0, 0, 720983, 0, 0, 721045, 0, 0, 851953, 0, 0, 786511, 0, 0, 786512, 0, 0, 786513, 0, 0, 786517, 0, 0, 786518, 0, 0, 786519, 0, 0, 786581, 0, 0, 917489, 0, 0, 917490, 0, 0, 917491, 0, 0, 917492, 0, 0, 917493, 0, 0, 917494, 0, 0, 917495, 0, 0, 917496, 0, 0, 917497, 0, 0, 917498, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 852007, 0, 0, 852008, 0, 0, 852009, 0, 0, 852010, 0, 0, 852011, 0, 0, 852012, 0, 0, 852013, 0, 0, 852014, 0, 0, 852015, 0, 0, 852016, 0, 0, 852017, 0, 0, 852018, 0, 0, 852019, 0, 0, 852020, 0, 0, 852021, 0, 0, 852022, 0, 0, 852023, 0, 0, 852024, 0, 0, 852025, 0, 0, 852026, 0, 0, 852027, 0, 0, 852028, 0, 0, 852029, 0, 0, 852030, 0, 0, 852031, 0, 0, 852032, 0, 0, 852033, 0, 0, 852034, 0, 0, 852035, 0, 0, 852036, 0, 0, 852037, 0, 0, 852038, 0, 0, 852039, 0, 0, 852040, 0, 0, 852041, 0, 0, 852042, 0, 0, 852043, 0, 0, 852044, 0, 0, 852045, 0, 0, 852046, 0, 0, 852047, 0, 0, 852048, 0, 0, 852049, 0, 0, 852053, 0, 0, 852054, 0, 0, 852055, 0, 0, 852056, 0, 0, 852057, 0, 0, 852058, 0, 0, 852059, 0, 0, 852060, 0, 0, 852061, 0, 0, 852062, 0, 0, 852063, 0, 0, 852064, 0, 0, 852065, 0, 0, 852066, 0, 0, 852067, 0, 0, 852068, 0, 0, 852069, 0, 0, 852070, 0, 0, 852071, 0, 0, 852072, 0, 0, 852073, 0, 0, 852074, 0, 0, 852075, 0, 0, 852076, 0, 0, 852077, 0, 0, 852078, 0, 0, 852079, 0, 0, 852080, 0, 0, 852081, 0, 0, 852082, 0, 0, 852083, 0, 0, 852084, 0, 0, 852085, 0, 0, 852086, 0, 0, 852087, 0, 0, 852088, 0, 0, 852089, 0, 0, 852090, 0, 0, 852091, 0, 0, 852092, 0, 0, 852093, 0, 0, 852094, 0, 0, 852095, 0, 0, 852096, 0, 0, 852097, 0, 0, 852098, 0, 0, 852099, 0, 0, 852100, 0, 0, 852101, 0, 0, 852102, 0, 0, 852103, 0, 0, 852104, 0, 0, 852105, 0, 0, 852106, 0, 0, 852107, 0, 0, 852108, 0, 0, 852109, 0, 0, 852110, 0, 0, 852111, 0, 0, 852112, 0, 0, 852113, 0, 0, 852114, 0, 0, 852115, 0, 0, 852116, 0, 0, 852117, 0, 0 )

[node name="Jugador" parent="." instance=ExtResource( 1 )]
position = Vector2( 615.493, 370.705 )

[node name="Robotito" parent="." instance=ExtResource( 3 )]
position = Vector2( 1079.99, 374.576 )

[node name="Robotito2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1160.72, 377.94 )

[node name="Robotito3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1254.9, 364.485 )

[node name="Robotito4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1359.17, 364.485 )

[node name="Robotito5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1456.71, 357.758 )

[node name="Robotito6" parent="." instance=ExtResource( 3 )]
position = Vector2( 1560.98, 367.849 )

[node name="Robotito7" parent="." instance=ExtResource( 3 )]
position = Vector2( 1651.8, 374.576 )

[node name="Robotito8" parent="." instance=ExtResource( 3 )]
position = Vector2( 1719.07, 381.303 )

[node name="Robotito9" parent="." instance=ExtResource( 3 )]
position = Vector2( 1799.8, 384.667 )

[node name="Robotito10" parent="." instance=ExtResource( 3 )]
position = Vector2( 1893.98, 371.212 )

[node name="Robotito11" parent="." instance=ExtResource( 3 )]
position = Vector2( 1998.25, 371.212 )

[node name="Robotito12" parent="." instance=ExtResource( 3 )]
position = Vector2( 2095.79, 364.485 )

[node name="Robotito13" parent="." instance=ExtResource( 3 )]
position = Vector2( 2200.07, 374.576 )

[node name="Robotito14" parent="." instance=ExtResource( 3 )]
position = Vector2( 2290.88, 381.303 )

[node name="Robotito15" parent="." instance=ExtResource( 3 )]
position = Vector2( -457.167, 260.214 )

[node name="Robotito16" parent="." instance=ExtResource( 3 )]
position = Vector2( -376.441, 263.578 )

[node name="Robotito17" parent="." instance=ExtResource( 3 )]
position = Vector2( -282.261, 250.123 )

[node name="Robotito18" parent="." instance=ExtResource( 3 )]
position = Vector2( -177.99, 250.123 )

[node name="Robotito19" parent="." instance=ExtResource( 3 )]
position = Vector2( -80.4454, 243.396 )

[node name="Robotito20" parent="." instance=ExtResource( 3 )]
position = Vector2( 23.8256, 253.487 )

[node name="Robotito21" parent="." instance=ExtResource( 3 )]
position = Vector2( 114.643, 260.214 )

[node name="Danger" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( -2031579, 1, 0, -2031578, 1, 0, -2031577, 1, 0, -2031576, 1, 0, -2031575, 1, 0, -2031574, 1, 0, -2031573, 1, 0, -2031572, 1, 0, -2031571, 1, 0, -655374, 1610612736, 0, -655373, 1610612736, 0, -655372, 1610612736, 0, -655371, 1610612736, 0, -655370, 1610612736, 0, -655369, 1610612736, 0, -655368, 1610612736, 0, -655367, 1610612736, 0, -655366, 1610612736, 0, -655365, 1610612736, 0, -655364, 1610612736, 0, -655363, 1610612736, 0, -655362, 1610612736, 0, -655361, 1610612736, 0, -720896, 1610612736, 0, -720895, 1610612736, 0, -720894, 1610612736, 0, -720893, 1610612736, 0, -720892, 1610612736, 0, -720891, 1610612736, 0, -720890, 1610612736, 0, -720889, 1610612736, 0, -720888, 1610612736, 0, -720887, 1610612736, 0, -720886, 1610612736, 0, -720885, 1610612736, 0, -720884, 1610612736, 0, -720883, 1610612736, 0, -720882, 1610612736, 0, -720881, 1610612736, 0, -720880, 1610612736, 0, -720879, 1610612736, 0, -720878, 1610612736, 0, -720877, 1610612736, 0, -720876, 1610612736, 0, -720875, 1610612736, 0, -720874, 1610612736, 0, -720873, 1610612736, 0, -720872, 1610612736, 0, -720871, 1610612736, 0, -720870, 1610612736, 0, -720869, 1610612736, 0, -720868, 1610612736, 0, -720867, 1610612736, 0, -720866, 1610612736, 0, -720865, 1610612736, 0, -720864, 1610612736, 0, -720863, 1610612736, 0, -720862, 1610612736, 0, -720861, 1610612736, 0, -720860, 1610612736, 0, -720859, 1610612736, 0, -720858, 1610612736, 0, -720857, 1610612736, 0, -720856, 1610612736, 0, -720855, 1610612736, 0, -720854, 1610612736, 0, -720853, 1610612736, 0, -720852, 1610612736, 0, -720851, 1610612736, 0, -720850, 1610612736, 0, -720849, 1610612736, 0, -720848, 1610612736, 0, -720847, 1610612736, 0, -720846, 1610612736, 0, -720845, 1610612736, 0, -720844, 1610612736, 0, -720843, 1610612736, 0, -720842, 1610612736, 0, -720841, 1610612736, 0, -720840, 1610612736, 0, -720839, 1610612736, 0, -720838, 1610612736, 0, -720837, 1610612736, 0, -720836, 1610612736, 0, -720835, 1610612736, 0, -720834, 1610612736, 0, 2555914, 1, 0, 2555915, 1, 0, 2555916, 1, 0, 2555917, 1, 0, 2555918, 1, 0, 2555919, 1, 0 )
